@startuml merise

title MERISE — MCD/MLD/MPD (Edifis-Pro)

' Entités principales
entity "USERS" as USERS {
  + user_id : INT <<PK>>
  --
  firstname : VARCHAR
  lastname  : VARCHAR
  email     : VARCHAR <<UNIQUE>>
  numberphone : VARCHAR <<UNIQUE>>
  profile_picture : VARCHAR
  password  : VARCHAR
  role      : ENUM("Admin","Worker","Manager")
  created_at : DATETIME
}

entity "ROLES" as ROLES {
  + role_id : INT <<PK>>
  --
  name : ENUM("Admin","Worker","Manager")
}

entity "CONSTRUCTION_SITES" as CONSTRUCTION_SITES {
  + construction_site_id : INT <<PK>>
  --
  name : VARCHAR
  state : ENUM("En cours","Terminé","Annulé","Prévu")
  description : TEXT
  adresse : VARCHAR
  start_date : DATE
  end_date : DATE
  open_time : TIME
  end_time  : TIME
  date_creation : DATE
  image_url : VARCHAR
  chef_de_projet_id : INT <<FK USERS.user_id>>
}

entity "TASKS" as TASKS {
  + task_id : INT <<PK>>
  --
  name : VARCHAR
  description : TEXT
  status : ENUM("En cours","Terminé","Annulé","Prévu")
  creation_date : DATETIME
  start_date : DATETIME
  end_date : DATETIME
  construction_site_id : INT <<FK CONSTRUCTION_SITES.construction_site_id>>
}



entity "COMPETENCES" as COMPETENCES {
  + competence_id : INT <<PK>>
  --
  name : VARCHAR
}

entity "USER_TASKS" as USER_TASKS {
  + user_id : INT <<FK USERS.user_id>>
  + task_id : INT <<FK TASKS.task_id>>
  --
  ' PK composite (user_id, task_id)
}

entity "USER_COMPETENCES" as USER_COMPETENCES {
  + user_id : INT <<FK USERS.user_id>>
  + competence_id : INT <<FK COMPETENCES.competence_id>>
  --
  ' PK composite (user_id, competence_id)
}

entity "PASSWORD_RESET_TOKENS" as PASSWORD_RESET_TOKENS {
  + id : INT <<PK>>
  --
  user_id : INT <<FK USERS.user_id>>
  token_hash : CHAR(64) <<UNIQUE>> ' SHA-256 hex
  expires_at : DATETIME
  used_at : DATETIME (nullable)
  ip : VARCHAR(45)
  user_agent : VARCHAR(255)
  created_at : DATETIME
}

' Associations (MCD)

USERS ||--o{ USER_TASKS : "1,N"
USER_TASKS }o--|| TASKS : "N,1"
USERS ||--o{ USER_COMPETENCES : "1,N"
USER_COMPETENCES }o--|| COMPETENCES : "N,1"
CONSTRUCTION_SITES ||--o{ TASKS : "1,N"

USERS ||--o{ CONSTRUCTION_SITES : "chef_de_projet (1,N)"
USERS ||--o{ PASSWORD_RESET_TOKENS : "1,N"

note "Contraintes (MLD/MPD)\n- USERS.email UNIQUE, USERS.numberphone UNIQUE\n- TASKS.construction_site_id -> CONSTRUCTION_SITES.construction_site_id\n\n\n- USER_TASKS PK=(user_id, task_id)\n- USER_COMPETENCES PK=(user_id, competence_id)\n- CONSTRUCTION_SITES.chef_de_projet_id -> USERS.user_id\n- PASSWORD_RESET_TOKENS.token_hash UNIQUE" as N1
N1 .. USERS

@enduml
